# kemri_toy

./: .gitignore  Cargo.toml  README.md  check_ml_dsa_keys.sh  gen_all_certs.sh  gen_all_csrs.sh  gen_sig_tests.sh  gen_tests.sh  ta.der  vet_csrs.sh
.cargo/: config.toml
src/: args.rs  asn1.rs  error.rs  main.rs  misc.rs  pqc.rs
src/asn1/: auth_env_data.rs  auth_env_data_builder.rs  composite.rs  ec_private_key.rs  kemri.rs  kemri_builder.rs  macros.rs  oids.rs  private_key.rs  utils.rs
src/misc/: algs.rs  builder_profiles.rs  check_private_key.rs  ecdh.rs  gen_certs.rs  logging.rs  oaep_kem.rs  rsa.rs  signed_data.rs  signer.rs  utils.rs
src/pqc/: key_pair.rs  signature.rs  signer.rs  verifying_key.rs
tests/artifacts/cryptonext/: 1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_ee.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_auth.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_id-alg-hkdf-with-sha256.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_ukm.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_priv.der  1.3.6.1.4.1.22554.5.6.2_ML-KEM-768-ipd_ee.der  1.3.6.1.4.1.22554.5.6.2_ML-KEM-768-ipd_kemri_auth.der  1.3.6.1.4.1.22554.5.6.2_ML-KEM-768-ipd_kemri_id-alg-hkdf-with-sha384.der  1.3.6.1.4.1.22554.5.6.2_ML-KEM-768-ipd_kemri_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.2_ML-KEM-768-ipd_kemri_ukm.der  1.3.6.1.4.1.22554.5.6.2_ML-KEM-768-ipd_priv.der  1.3.6.1.4.1.22554.5.6.3_ML-KEM-1024-ipd_ee.der  1.3.6.1.4.1.22554.5.6.3_ML-KEM-1024-ipd_kemri_auth.der  1.3.6.1.4.1.22554.5.6.3_ML-KEM-1024-ipd_kemri_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.3_ML-KEM-1024-ipd_kemri_ukm.der  1.3.6.1.4.1.22554.5.6.3_ML-KEM-1024-ipd_priv.der  1.3.6.1.4.1.22554.5.6.7_kyber512shake_ee.der  1.3.6.1.4.1.22554.5.6.7_kyber512shake_kemri_auth.der  1.3.6.1.4.1.22554.5.6.7_kyber512shake_kemri_id-alg-hkdf-with-sha256.der  1.3.6.1.4.1.22554.5.6.7_kyber512shake_kemri_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.7_kyber512shake_kemri_ukm.der  1.3.6.1.4.1.22554.5.6.7_kyber512shake_priv.der  1.3.6.1.4.1.22554.5.6.8_kyber768shake_ee.der  1.3.6.1.4.1.22554.5.6.8_kyber768shake_kemri_auth.der  1.3.6.1.4.1.22554.5.6.8_kyber768shake_kemri_id-alg-hkdf-with-sha384.der  1.3.6.1.4.1.22554.5.6.8_kyber768shake_kemri_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.8_kyber768shake_kemri_ukm.der  1.3.6.1.4.1.22554.5.6.8_kyber768shake_priv.der  1.3.6.1.4.1.22554.5.6.9_kyber1024shake_ee.der  1.3.6.1.4.1.22554.5.6.9_kyber1024shake_kemri_auth.der  1.3.6.1.4.1.22554.5.6.9_kyber1024shake_kemri_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.9_kyber1024shake_kemri_ukm.der  1.3.6.1.4.1.22554.5.6.9_kyber1024shake_priv.der  ML-DSA-44-2.16.840.1.101.3.4.3.17_expandedkey_priv.der  ML-DSA-44-2.16.840.1.101.3.4.3.17_signed_attrs.der  ML-DSA-65-2.16.840.1.101.3.4.3.18_expandedkey_priv.der  ML-DSA-65-2.16.840.1.101.3.4.3.18_signed_attrs.der  ML-DSA-87-2.16.840.1.101.3.4.3.19_expandedkey_priv.der  ML-DSA-87-2.16.840.1.101.3.4.3.19_signed_attrs.der  (+155 more)
tests/artifacts/daniel/: 1.3.6.1.4.1.22554.5.6.1_ee.der  1.3.6.1.4.1.22554.5.6.1_enveloped_aes-256-cbc.der  1.3.6.1.4.1.22554.5.6.1_enveloped_aes-256-cbc_id-alg-hkdf-with-sha256.der  1.3.6.1.4.1.22554.5.6.1_enveloped_aes-256-cbc_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.1_enveloped_aes-256-gcm.der  1.3.6.1.4.1.22554.5.6.1_enveloped_aes-256-gcm_id-alg-hkdf-with-sha256.der  1.3.6.1.4.1.22554.5.6.1_enveloped_aes-256-gcm_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.1_enveloped_ukm_aes-256-cbc.der  1.3.6.1.4.1.22554.5.6.1_enveloped_ukm_aes-256-gcm.der  1.3.6.1.4.1.22554.5.6.1_priv.der  1.3.6.1.4.1.22554.5.6.2_ee.der  1.3.6.1.4.1.22554.5.6.2_enveloped_aes-256-cbc.der  1.3.6.1.4.1.22554.5.6.2_enveloped_aes-256-cbc_id-alg-hkdf-with-sha256.der  1.3.6.1.4.1.22554.5.6.2_enveloped_aes-256-cbc_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.2_enveloped_aes-256-gcm.der  1.3.6.1.4.1.22554.5.6.2_enveloped_aes-256-gcm_id-alg-hkdf-with-sha256.der  1.3.6.1.4.1.22554.5.6.2_enveloped_aes-256-gcm_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.2_enveloped_ukm_aes-256-cbc.der  1.3.6.1.4.1.22554.5.6.2_enveloped_ukm_aes-256-gcm.der  1.3.6.1.4.1.22554.5.6.2_priv.der  1.3.6.1.4.1.22554.5.6.3_ee.der  1.3.6.1.4.1.22554.5.6.3_enveloped_aes-256-cbc.der  1.3.6.1.4.1.22554.5.6.3_enveloped_aes-256-cbc_id-alg-hkdf-with-sha256.der  1.3.6.1.4.1.22554.5.6.3_enveloped_aes-256-cbc_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.3_enveloped_aes-256-gcm.der  1.3.6.1.4.1.22554.5.6.3_enveloped_aes-256-gcm_id-alg-hkdf-with-sha256.der  1.3.6.1.4.1.22554.5.6.3_enveloped_aes-256-gcm_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.3_enveloped_ukm_aes-256-cbc.der  1.3.6.1.4.1.22554.5.6.3_enveloped_ukm_aes-256-gcm.der  1.3.6.1.4.1.22554.5.6.3_priv.der
tests/artifacts/kemri_toy/: 1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_ee.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_auth_id-alg-hkdf-with-sha256.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_auth_id-alg-hkdf-with-sha256_ukm.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_auth_id-alg-hkdf-with-sha384.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_auth_id-alg-hkdf-with-sha384_ukm.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_auth_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_auth_id-alg-hkdf-with-sha512_ukm.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_auth_id-kmac128.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_auth_id-kmac128_ukm.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_auth_id-kmac256.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_auth_id-kmac256_ukm.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_id-alg-hkdf-with-sha256.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_id-alg-hkdf-with-sha256_ukm.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_id-alg-hkdf-with-sha384.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_id-alg-hkdf-with-sha384_ukm.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_id-alg-hkdf-with-sha512.der  1.3.6.1.4.1.22554.5.6.1_ML-KEM-512-ipd_kemri_id-alg-hkdf-with-sha512_ukm.der  (+355 more)
(+8 files in other folders)
