[package]
name = "kemri_toy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
# ASN.1 encoding/decoding and related support from RustCrypto community
cms = { version = "0.3.0-pre.0", features = ["builder"] }
const-oid = { version = "0.10.1", default-features = false, features = ["db"] }
der = { version="0.8.0-rc.8", features = ["alloc", "derive", "flagset", "oid"] }
spki = { version = "0.8.0-rc.4", default-features = false, features = ["alloc"] }
x509-cert = { version = "0.3.0-rc.1", default-features = false, features = ["hazmat", "builder"] }

pqckeys = { git = "https://github.com/carl-wallace/pqckeys", branch = "kemri", features = ["pem"] }

# cryptography-related crates
aes = { version = "=0.9.0-rc.0" }
aes-gcm = "0.11.0-rc.0"
aes-kw ="0.3.0-rc.0"
cbc = { version = "0.2.0-rc.0" }
cipher = { version = "0.5.0-rc.0", features = ["alloc", "block-padding", "rand_core"] }
ecdsa = {version = "0.17.0-rc.5", default-features = false, features = ["der", "pkcs8"]}
ed25519-dalek = { version = "2.2.0-pre", default-features = false, features = ["fast", "zeroize", "pkcs8", "rand_core"] }
ed448-goldilocks = {version = "0.14.0-pre.2", default-features = false}
elliptic-curve = {version = "0.14.0-rc.12", default-features = false, features = ["sec1", "pkcs8"]}
hkdf = "0.13.0-rc.0"
hmac = "0.13.0-rc.0"
kem = "0.3.0-pre.0"
ml-dsa = "0.1.0-pre.2"
ml-kem = { version = "0.3.0-pre", features=["deterministic"] }
p256 = {version = "0.14.0-pre.9", default-features = false, features = ["ecdsa", "pkcs8"]}
p384 = {version = "0.14.0-pre.9", default-features = false, features = ["ecdsa", "pkcs8"]}
p521 = {version = "0.14.0-pre.9", default-features = false, features = ["ecdsa", "pkcs8"]}
rsa = { version = "0.10.0-rc.4", features = ["sha2"] }
sha2 = "0.11.0-rc.0"
sha3 = "0.11.0-rc.0"
signature = { version = "3.0.0-rc.2", features = ["digest", "alloc"]}
slh-dsa = "0.2.0-pre"
tari-tiny-keccak = { version = "2.0.2", features = ["kmac"] }

# utility crates
clap = {version = "4.4.40", features = ["std", "derive"] }
log = "0.4.27"
log4rs = "1.3.0"
rand_core = { version = "0.9.3", features = ["std"] }
rand = "0.9.2"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
subtle-encoding = {version = "0.5.1", default-features = false, features = ["hex", "alloc"]}
zerocopy = "0.8.26"
hex-literal = "1.0.0"
lazy_static = "1.5.0"
colored = "3.1.1"

[patch.crates-io]
aes-gcm       = { git="https://github.com/RustCrypto/AEADs.git" }

aes           = { git = "https://github.com/RustCrypto/block-ciphers.git" }

cbc           = { git = "https://github.com/RustCrypto/block-modes.git" }
#ctr           = { git = "https://github.com/RustCrypto/block-modes.git" }
ctr           = { path = "/Users/cwallace/devel/carl-wallace/block-modes/ctr" }

crypto-bigint = { git = "https://github.com/RustCrypto/crypto-bigint.git" }

ed448-goldilocks = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p256            = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p384            = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
p521            = { git = "https://github.com/RustCrypto/elliptic-curves.git" }
primefield = { git = "https://github.com/RustCrypto/elliptic-curves.git" }

cms           = { git = "https://github.com/RustCrypto/formats.git" }
der           = { git = "https://github.com/RustCrypto/formats.git" }
der_derive    = { git = "https://github.com/RustCrypto/formats.git" }
pkcs1         = { git = "https://github.com/RustCrypto/formats.git" }
pkcs8         = { git = "https://github.com/RustCrypto/formats.git" }
sec1          = { git = "https://github.com/RustCrypto/formats.git" }
spki          = { git = "https://github.com/RustCrypto/formats.git" }
x509-cert     = { git = "https://github.com/RustCrypto/formats.git" }

sha2          = { git = "https://github.com/RustCrypto/hashes.git" }

ml-kem        = { git = "https://github.com/RustCrypto/KEMs.git"}

aes-kw        = { git = "https://github.com/RustCrypto/key-wraps.git" }

rsa           = { git = "https://github.com/RustCrypto/RSA.git" }

ecdsa         = { git = "https://github.com/RustCrypto/signatures.git" }
ml-dsa        = { git = "https://github.com/RustCrypto/signatures" }
slh-dsa       = { git = "https://github.com/RustCrypto/signatures" }

aead          = { git = "https://github.com/RustCrypto/traits.git" }
crypto-common = { git = "https://github.com/RustCrypto/traits.git" }
digest        = { git = "https://github.com/RustCrypto/traits.git" }
elliptic-curve = { git = "https://github.com/RustCrypto/traits.git" }
kem           = { git = "https://github.com/RustCrypto/traits.git" }
signature     = { git = "https://github.com/RustCrypto/traits.git" }

block-buffer  = { git = "https://github.com/RustCrypto/utils" }

